--- a/src/components/scroll/Scroll.scss
+++ b/src/components/scroll/Scroll.scss
@@ -24,6 +24,13 @@
   background-color: black;
 }
 
+@media (max-width: 650px) {
+  .fullscreen-bg {
+    padding: 10px 20px;
+    width: 150vw;
+  }
+}
+
 .fullscreen-bg__video {
   position: absolute;
   top: 0;
@@ -34,11 +41,28 @@
 
 .originals {
   @include center($align: start, $justify: center, $direction: column);
-
   width: 100vw;
   height: 85vh;
   padding-left: 200px;
   color: $text;
+}
+
+@media (max-width: 650px) {
+  .originals {
+    padding-left: 10px;
+  }
+
+  .originals h1 {
+    font-size: 60px;
+  }
+
+  .lines {
+    padding: 100px;
+  }
+
+  .plans {
+    padding: 100px;
+  }
 }
 
 .originals h1 {
@@ -48,7 +72,6 @@
 
 .originals p {
   @include center;
-
   font-size: 20px;
 }
 
@@ -62,7 +85,6 @@
 
 .lines {
   @include center($justify: center);
-
   font-size: 60px;
   font-family: 'San Francisco Bold', serif;
   color: $text;
@@ -73,7 +95,6 @@
 
 .plans {
   @include center;
-
   background-color: black;
   color: $text;
   width: 100vw;
