--- a/src/components/elements/Noti.scss
+++ b/src/components/elements/Noti.scss
@@ -2,11 +2,17 @@
 
 .noti {
   @include center($justify: space-around);
-
   background-color: $noti-bg;
   color: $text;
   font-size: 12px;
   padding: 18px $nav-y-padding;
+}
+
+@media (max-width: 650px) {
+  .noti {
+    padding: 10px 20px;
+    width: 150vw;
+  }
 }
 
 select {
